<resources>
    <string name="app_name">玩安卓</string>
    <string name="iv_desc_top_flag">置顶标志</string>
    <string name="iv_desc_collect_button">收藏按钮</string>
    <string name="main_search_hint">搜索感兴趣的内容</string>
    <string name="iv_desc_user_head">用户头像</string>
    <string name="iv_desc_article_pic">文章图片预览</string>
    <string name="back">返回</string>
    <string name="transition_name_search">search_view</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="clear_all_search_key">清除所有</string>
    <string name="alert">提示</string>
    <string name="msg_delete_all_history_keys">确定要清除搜索历史？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="iv_desc_title_icon">标题图标</string>
    <string name="iv_desc_home_module_icon">模块ICON</string>
    <string name="iv_desc_home_module_background">首页模块背景图片</string>
    <string name="iv_desc_banner">轮播图</string>
    <string name="net_conn_error">网络连接异常</string>
    <string name="io_error">加载失败</string>
    <string name="json_error">解析异常</string>
    <string name="search">搜索</string>
    <string name="system_tree">体系</string>
    <string name="navigation">导航</string>
    <string name="qa">问答</string>
    <string name="hint_password">密码</string>
    <string name="helper_text_password">请输入密码</string>
    <string name="placeholder_text_password">请输入密码</string>
    <string name="hint_user_name">用户名</string>
    <string name="placeholder_user_name">请输入用户名</string>
    <string name="btn_text_login">登录</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="placeholder_text_confirm_password">请再次输入密码</string>
    <string name="btn_text_register">注册</string>
</resources>
